# Nova-Engine

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
Core/: CMakeLists.txt
Core/class/Window/: Window.hpp
Core/include/: Core.hpp
Core/src/: Core.cpp
Core/test/: CMakeLists.txt  test.cpp
Engine/: CMakeLists.txt
Engine/class/Component/Collision/: Collision.cpp
Engine/class/Component/Component/: Component.cpp  Component.hpp
Engine/class/Component/Script/: Script.cpp  Script.hpp
Engine/class/Component/Texture/: Texture.cpp  Texture.hpp
Engine/class/Component/Transform/: Transform.cpp
Engine/class/Entity/: Entity.cpp  Entity.hpp  EntityUtils.cpp
Engine/class/Vector2/: Vector2.hpp
Engine/class/Vector2Int/: Vector2Int.hpp
Engine/include/: Engine.hpp
Engine/src/: Engine.cpp
Engine/test/: CMakeLists.txt  test.cpp
Engine/wrapper/: ComponentsWrapper.cpp  EntityWrapper.cpp  Wrapper.hpp
Lib/: CMakeLists.txt
Lib/class/Component/Collision/: Collision.hpp
Lib/class/Component/Texture/: Texture.cpp
Lib/class/Component/Transform/: Transform.hpp
Lib/class/Vector/: Vector.cpp  Vector.hpp
Lib/class/Vector2/: Vector2.cpp
Lib/class/Vector2Int/: Vector2Int.cpp
Lib/include/: lib.hpp
Lib/src/: Lib.cpp
tests/: main.cpp
